--- a/css/styles.css
+++ b/css/styles.css
@@ -1036,8 +1036,6 @@ img {
 .subscribe-form-input::placeholder {
     color:  #505050;
 }
-
-
 .subscribe-btn {
     width: 103px;
     height: 42px;
@@ -1050,6 +1048,10 @@ img {
     line-height: 1.5;
     margin-bottom: 24px;
 }
+  .subscribe-btn:hover,
+  .subscribe-btn:focus {
+      background-color: #FFE450;
+  }
 .subscribe-text-down {
     font-size: 12px;
 }
@@ -1153,10 +1155,7 @@ img {
         margin-left: 234px;
         margin-top: 0;
     }   
-    .subscribe-btn:hover,
-    .subscribe-btn:focus {
-        background-color: #FFE450;
-    }
+  
 }
 
 @media screen and (min-width: 1280px) {
@@ -1164,10 +1163,9 @@ img {
         position: relative;
         display: flex;
         justify-content: center;
-        padding: 100px 0 100px;
-        
+        padding-top: 100px;
+        padding-bottom: 100px;
         width: 1280px;
-         
     }
     .footer-div-wrapper {
         display: flex;
@@ -1199,16 +1197,16 @@ img {
         display: none;
     }
     .footer-down-div {
-        margin-left: 20px;
+      
     }
     .subscribe-text-last {
     font-size: 12px;
     margin: 0;
     margin-top: 80px;
-    margin-left: 224px;
+    
 }
     .subscribe-text-last {
-    margin-left: 740px;
+     margin-left: 710px; 
     }
 }
 
